--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -14,6 +14,6 @@ jobs:
       - uses: release-drafter/release-drafter@v5
         with:
           # (Optional) specify config name to use, relative to .github/. Default: release-drafter.yml
-          config-name: .github/release-drafter.yml
+          config-name: .github/release-drafter2.yml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
