--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,5 +1,9 @@
-name-template: 'v$RESOLVED_VERSION 🌈'
-tag-template: 'v$RESOLVED_VERSION'
+# name-template: 'v$RESOLVED_VERSION 🌈'
+# tag-template: 'v$RESOLVED_VERSION'
+template: |
+  ## Changes
+
+  $CHANGES
 categories:
   - title: '🚀 Features'
     labels:
@@ -25,7 +29,3 @@ version-resolver:
     labels:
       - 'patch'
   default: patch
-template: |
-  ## Changes
-
-  $CHANGES
