--- a/.github/workflows/auto-draft.yml
+++ b/.github/workflows/auto-draft.yml
@@ -3,8 +3,8 @@ name: Release Drafter
 on:
   push:
     # branches to consider in the event; optional, defaults to all
-    # branches:
-    #   - master
+    branches:
+      - develop
 
 jobs:
   update_release_draft:
