--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -7,6 +7,7 @@ categories:
     labels:
       - 'feature'
       - 'enhancement'
+      - 'optimise'
   - title: '🐛 Bug Fixes'
     labels:
       - 'fix'
