--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,34 +1,34 @@
-name-template: 'v$RESOLVED_VERSION'
-tag-template: 'v$RESOLVED_VERSION'
+name-template: "v$RESOLVED_VERSION"
+tag-template: "v$RESOLVED_VERSION"
 template: |
   ## Changes
 
   $CHANGES
 categories:
-  - title: '🚀 Features'
+  - title: "🚀 Features"
     labels:
-      - 'feature'
-      - 'enhancement'
-      - 'optimise'
-  - title: '🐛 Bug Fixes'
+      - "feature"
+      - "enhancement"
+      - "optimise"
+  - title: "🐛 Bug Fixes"
     labels:
-      - 'fix'
-      - 'bug'
-  - title: '🧰 Maintenance'
-    label: 'chore'
-  - title: 'Debt'
+      - "fix"
+      - "bug"
+  - title: "🧰 Maintenance"
+    label: "chore"
+  - title: "Debt"
     labels:
-      - 'debt'
-change-template: '- $TITLE @$AUTHOR (#$NUMBER)'
+      - "debt"
+change-template: "- $TITLE @$AUTHOR (#$NUMBER)"
 change-title-escapes: '\<*_&' # You can add # and @ to disable mentions, and add ` to disable code blocks.
 version-resolver:
   major:
     labels:
-      - 'major'
+      - "major"
   minor:
     labels:
-      - 'minor'
+      - "minor"
   patch:
     labels:
-      - 'patch'
+      - "patch"
   default: patch
