--- a/.github/workflows/auto-draft.yml
+++ b/.github/workflows/auto-draft.yml
@@ -18,4 +18,7 @@ jobs:
           version: ${{ env.VERSION }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - run: echo $steps.create_release_draft.outputs.html_url
+      - name: Try
+        run: echo $UPLOAD_URL
+        env:
+          UPLOAD_URL: ${{ steps.create_release_draft.outputs.upload_url }}
