--- a/.github/workflows/auto-draft.yml
+++ b/.github/workflows/auto-draft.yml
@@ -17,12 +17,13 @@ jobs:
           config-name: release-drafter.yml
           tag: ${{ env.VERSION }}
           version: ${{ env.VERSION }}
+          publish: true
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Try
-        run: |
-            echo $XX1
-            echo $XX2
-        env:
-          XX1: ${{ steps.release_drafter.outputs.html_url }}
-          XX2: ${{ steps.release_drafter.outputs.tag_name }}
+      # - name: Try
+      #   run: |
+      #       echo $XX1
+      #       echo $XX2
+      #   env:
+      #     XX1: ${{ steps.release_drafter.outputs.html_url }}
+      #     XX2: ${{ steps.release_drafter.outputs.tag_name }}
