--- a/.github/workflows/check-version.yml
+++ b/.github/workflows/check-version.yml
@@ -3,18 +3,19 @@ name: Check release tag
 on: push
 
 jobs:
-  create_release_draft:
+  check_release:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - id: get_version
-        uses: battila7/get-version-action@v2
-      - run: echo ${{ steps.get_version.outputs.version }}
-      - run: echo ${{ steps.get_version.outputs.version-without-v }}
-      - run: echo $(./version.sh)
-      - run: echo ${{ github.event.release.tag_name }}
       - id: get_last_version
         uses: pozetroninc/github-action-get-latest-release@master
         with:
+          repository: panachainy/github-auto-release
           excludes: prerelease, draft
-      - run: echo ${{ steps.get_last_version.outputs.release }}
+      - name: Latest version
+        run: echo "Lastest version ${{ steps.get_last_version.outputs.release }}"
+      - name: Current version
+        run: echo "Current version $(./version.sh)"
+      - name: Check version is more than previous versions
+        run: echo ${{ steps.get_last_version.outputs.release }} | sed 's/v//'
+      - run: echo $(./version.sh) | sed 's/v//'
