--- a/.github/workflows/check-version.yml
+++ b/.github/workflows/check-version.yml
@@ -12,10 +12,22 @@ jobs:
         with:
           repository: panachainy/github-auto-release
           excludes: prerelease, draft
-      - name: Latest version
-        run: echo "Lastest version ${{ steps.get_last_version.outputs.release }}"
-      - name: Current version
-        run: echo "Current version $(./version.sh)"
-      - name: Check version is more than previous versions
-        run: echo ${{ steps.get_last_version.outputs.release }} | sed 's/v//'
-      - run: echo $(./version.sh) | sed 's/v//'
+      - name: Check version is duplicate with previous versions or not.
+        run: |
+          echo "Lastest version ${{ steps.get_last_version.outputs.release }}"
+          echo "Current version $(./version.sh)"
+
+          last_version="$(echo ${{ steps.get_last_version.outputs.release }} | sed 's/v//')"
+          current_version="$(echo $(./version.sh) | sed 's/v//')"
+
+          echo "Lastest version: $last_version"
+          echo "Current version: $current_version"
+          echo '============================'
+
+          if [ "$last_version" == "$current_version" ]; then
+              echo "Error version is the save previous version should be upgrade your version before merge."
+              exit 1
+          else
+              echo "Strings are not equal"
+              exit 0
+          fi
